<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="tab_favorites_movies">Movies</string>
    <string name="tab_favorites_tv_show">Tv Show</string>
    <string name="contentDescription">This is poster image</string>
    <string name="release_date">Release date:</string>
    <string name="year">Year</string>
    <string name="overview">Overview</string>
    <string name="vote_average">Vote Average</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="removed_from_favorite">Removed from Favorite</string>
    <string name="search_title">Search</string>
    <string name="search_movies_hint">Search Movie</string>
    <string name="search_tvshow_hint">Search Tv Show</string>
    <string name="empty_text">NO DATA</string>
    <string name="favorite_movies">FAVORITE MOVIES</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_note">Daily Reminder, send notifications to users to return to the Movie Catalogue Application</string>
    <string name="daily_reminder_message">Now is the time for you to watch a movie, please open the Movie Catalogue Application</string>
    <string name="daily_reminder_enabled">Daily Reminder Enabled</string>
    <string name="daily_reminder_disabled">Daily Reminder Disabled</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="movie_release_today">Movie Release Today</string>
    <string name="release_today_reminder_note">Release Today Reminder, send notifications to users of all films released today</string>
    <string name="release_today_enabled">Release Today Reminder Enabled</string>
    <string name="release_today_disabled">Release Today Reminder Disabled</string>
    <string name="today_release">Today release: </string>
    <string name="setting_language">Setting Language</string>
    <string name="setting_language_note">Application language settings</string>
</resources>
